final draft, awaiting comments

--- a/sections/02_intro.tex
+++ b/sections/02_intro.tex
@@ -1,4 +1,4 @@
-\section{Introduction}
+\chapter{Introduction}
 In recent years, many industries have experienced enormous changes due to an influx of huge quantities of data, increasingly affordable data storage solutions and access to high computational power \cite[]{chen_big_2014}. The aviation industry is no exception: the Airbus A350 XWB comes equipped with approximately \numprint{6000} sensors that produce 300 GB of data every day; the next generation Airbus A380 will come with \numprint{10000} sensors on a single wing alone \cite[]{rajaraman_big_2016}.
 
 This data can only be of value if there are suitable tools for handling it. The arrival of the age of Big Data \cite[]{fan_mining_2013} coincided unsurprisingly with an increase in the popularity of \ac{ai} and \ac{ml}. Today, highly optimised, specially designed programming libraries make data-orientated \ac{ml} approaches more accessible and more powerful than ever.
