--- a/sections/abbrv.tex
+++ b/sections/abbrv.tex
@@ -124,6 +124,18 @@
 	class	=	Machine learning
 }
 
+\DeclareAcronym{dtw}{
+	short	=	DTW,
+	long	=	dynamic time warping,
+	class	=	Machine learning
+}
+
+\DeclareAcronym{uts}{
+	short	=	UTS,
+	long	=	univariate time series,
+	class	=	Machine learning
+}
+
 \DeclareAcronym{mts}{
 	short	=	MTS,
 	long	=	multivariate time series,
