--- a/sections/preamble.tex
+++ b/sections/preamble.tex
@@ -21,22 +21,7 @@
 \usepackage{subcaption}
 \usepackage{tikz}
 \usepackage{titlesec}
-
-% For numbered \paragraph subsubsubsections
-\setcounter{secnumdepth}{4}
-
-\titleformat{\paragraph}
-{\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
-\titlespacing*{\paragraph}
-{0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
-
-\usetikzlibrary{positioning}
-
-\tikzset{basic/.style={draw,text width=2em,text centered}}
-\tikzset{input/.style={basic,circle}}
-\tikzset{weights/.style={basic,rectangle}}
-\tikzset{functions/.style={basic,circle}}
-\tikzstyle{node}=[draw,circle,minimum size=10pt,inner sep=0pt]
-\tikzstyle{transition}=[-stealth]
-
-\graphicspath{{img/}}
+\usepackage{multirow}
+\usepackage{siunitx}
+\usepackage{pdfpages}
+\usepackage[headsepline,nouppercase,automark]{scrpage2}
