--- a/sources.bib
+++ b/sources.bib
@@ -726,3 +726,19 @@ The proposed approach is an interesting addition to existing learning tools for 
 	pages = {12},
 	file = {Keogh et al. - Locally Adaptive Dimensionality Reduction for Inde.pdf:/home/samuelob/snap/zotero-snap/common/Zotero/storage/YMPQ5XYS/Keogh et al. - Locally Adaptive Dimensionality Reduction for Inde.pdf:application/pdf}
 }
+
+@article{russakovsky_imagenet_2015,
+	title = {{ImageNet} {Large} {Scale} {Visual} {Recognition} {Challenge}},
+	url = {http://arxiv.org/abs/1409.0575},
+	abstract = {The ImageNet Large Scale Visual Recognition Challenge is a benchmark in object category classiﬁcation and detection on hundreds of object categories and millions of images. The challenge has been run annually from 2010 to present, attracting participation from more than ﬁfty institutions.},
+	language = {en},
+	urldate = {2020-05-12},
+	journal = {arXiv:1409.0575 [cs]},
+	author = {Russakovsky, Olga and Deng, Jia and Su, Hao and Krause, Jonathan and Satheesh, Sanjeev and Ma, Sean and Huang, Zhiheng and Karpathy, Andrej and Khosla, Aditya and Bernstein, Michael and Berg, Alexander C. and Fei-Fei, Li},
+	month = jan,
+	year = {2015},
+	note = {arXiv: 1409.0575},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, I.4.8, I.5.2},
+	annote = {Comment: 43 pages, 16 figures. v3 includes additional comparisons with PASCAL VOC (per-category comparisons in Table 3, distribution of localization difficulty in Fig 16), a list of queries used for obtaining object detection images (Appendix C), and some additional references},
+	file = {Russakovsky et al. - 2015 - ImageNet Large Scale Visual Recognition Challenge.pdf:/home/samuelob/snap/zotero-snap/common/Zotero/storage/4HUYXY83/Russakovsky et al. - 2015 - ImageNet Large Scale Visual Recognition Challenge.pdf:application/pdf}
+}
