--- a/sections/00_title-page.tex
+++ b/sections/00_title-page.tex
@@ -1,33 +1,32 @@
 
 \begin{titlepage}
 
-        % \raisebox{-0.5\height}{\includegraphics[height=3cm]{rolls_royce}}
-        \centering
-        {\includegraphics[height=2.75cm]{tu-logo}}
+   {\footnotesize
+   \begin{tabular}{l r}
+      & \multirow{5}{*}{\hspace{5em}\includegraphics[height=2.75cm]{tu-logo}} \\
+      Konstruktion und Produktzuverl\"assigkeit \\
+      Institut f\"ur Maschinenkonstruktion und Systemtechnik \\
+      Technische Universit\"at Berlin \\
+      Prof.~Dr.~Ing.~Robert Liebich \\
+   \end{tabular}}
 
-        \vspace{2.5cm}
-        {\Large \textbf{Machine Learning of Engine Health Monitoring Data: Development of a machine learning model for damage prediction of real flight missions}\par}
-        \vspace{1cm}
-        {\scshape\Large Technische Universit\"at Berlin \par}
-        \vspace{0.2cm}
-        % {\large Technische Universit\"at Berlin\par}
-        {\large Faklut\"at V f\"ur Verkehrs- und Maschinensysteme\\im Fach Festigkeit und Lebensdauer\par}
-        \vspace{1.5cm}
-        {\huge\bfseries Bachelorarbeit\par}
-        \vspace{0.6cm}
-        {\large zur Erlangung des akademischen Grades \\Bachelor of Science (B.Sc.)\\im Studiengang Physikalische Ingenieurwissenschaft\par}
-        \vspace{1.2cm}
-        \begin{tabular}{>{\bfseries}r l}
-            Verfasser & Samuel Oliver Bryson \\
-            % Geboren & am 21.12.1991 \\ & in Nottingham, Gro\ss{}britannien \\
-            Matrikelnr. & 352667 \\
-            Ausgabedatum & 29.01.2020 \\
-            Eingereicht am & XX.XX.2020 \\
-            Betreuung & Prof. Dr.-Ing. Robert Liebich \\
-            & Dr. Stephan Pannier \\
-            & Tolga Ya\u{g}c\i{}, M.Eng.\\
-            & Tobias Werder, M.Sc.\\
-            % Themenstellender Betrieb & Rolls-Royce Deutschland Ltd \& Co KG
-        \end{tabular}
+   {\centering
+
+   \vspace{4.5cm}
+   {\LARGE\bfseries Bachelorarbeit\par}
+   \vspace{1.5cm}
+   {\Large \textbf{Machine Learning of Engine Health Monitoring Data: Development of a machine learning model for damage prediction of real flight missions}\par}
+   \vspace{1cm}
+
+   \vspace{1cm}
+   {\Large Samuel Oliver Bryson} \\
+   \vspace{0.5cm}
+   {\large XX.05.2020} \\}
+
+   \vspace{3.5cm}
+   \large{\textit{Betreuung}} \vspace{0.5cm} \\
+   Prof. Dr.-Ing. Robert Liebich \\
+   Tobias Werder, M.Sc. \\
+   Tolga Ya\u{g}c\i{}, M.Eng. \\
 
 \end{titlepage}
