--- a/sections/04_data.tex
+++ b/sections/04_data.tex
@@ -1,7 +1,7 @@
-\section{Data Analysis}
+\chapter{Data Analysis and Representation}
 The following section will include an overview and visualisation of the data acquired for the research, and how it was processed for use in the neural networks.
 
-\subsection{Engine Health Monitoring Data} \label{sec:ehm}
+\section{Engine Health Monitoring Data} \label{sec:ehm}
 The research was carried out on \ac{ehm} data. This data was recorded by sensors in 231 BR725 engines during a total of 14\,045 flights, and returned on a voluntary basis to Rolls-Royce by operators for analysis.
 
 The BR725 is used in the Gulfstream G650, a business jet built for up to 18 passengers. Each G650 has two engines; to minimise the amount of data used, the values used in this thesis were taken from the left engine only.
@@ -12,8 +12,8 @@ The BR725 is used in the Gulfstream G650, a business jet built for up to 18 pass
     \caption{\label{fig:flight_len} A histogram of the lengths of 14\,045 flights}
 \end{figure}
 
-The flights range in length from 1\,013 to 57\,062 seconds (approximately 0.28 to 15.85 hours), with a mean length of 10\,182.82 seconds and a standard deviation of 9\,561.03 seconds (see Figure \ref{fig:flight_len}).
-
+The flights range in length from 1\,013 to 57\,062 seconds (approximately 0.28 to 15.85 hours), with a mean length of 10\,182.82 seconds (see Figure \ref{fig:flight_len}).
+s
 Each flight is summarised in a CSV file with 216 columns, comprising one timestamp and 215 values for each second of recording time.
 
 \begin{figure}
@@ -26,16 +26,17 @@ The four flight parameters extracted from these \ac{csv} files were altitude (AL
 
 NH is measured in rotations per minute, and recorded as a percentage of the maximum rotational speed defined for the engine. It therefore takes any value between 0 and 100. ALT is measured in feet; the maximum altitude across all flights was 51\,148 feet, or 15\,590 metres. P30 is measured in PSIA, and ranges between 5.3 and 385.8 across all flights. The units of T30 are degrees Celsius and the values range from -12.0\textdegree{C} to 590.5\textdegree{C}.
 
-\subsection{Flight Phases} \label{sec:phases}
-A flight can be split into several phases: preflight, taxi out, take-off, climb, cruise, descent, reverse thrust and taxi in. These phases were extracted using internal Rolls-Royce software \cite[]{konig_br725stats_2018} that combined the flight mode parameter from \ac{ehm} data \cite[]{reischl_br700-725a1-12_2014} and custom conditions for optimisation. The conditions are summarised in table \ref{tab:flight_phases}.
+\section{Flight Phases} \label{sec:phases}
+A flight can be split into several phases: preflight, taxi out, take-off, climb, cruise, descent, reverse thrust and taxi in. These phases were extracted using internal Rolls-Royce software \cite[]{konig_br725stats_2018} that combined the flight mode parameter from \ac{ehm} data \cite[]{reischl_br700-725a1-12_2014} and custom conditions for optimisation. The conditions are summarised in Table \ref{tab:flight_phases}.
 
 The \ac{fm} often makes use of the parameter \ac{wow}, a boolean parameter with a value of 1 if the aircraft's weight is supported by its wheels, otherwise 0. Other parameters used for determining \ac{fm} include ground speed, intertial vertical speed, wing flap angle and \ac{tra}.
 
 \begin{table}
     \begin{center}
         \caption{\label{tab:flight_phases} Summary of flight phases, corresponding lengths after downsampling (Section \ref{sec:downsample}), and conditions at which they begin \cite[]{konig_br725stats_2018}. \ac{fm} conditions in accordance with \citet{reischl_br700-725a1-12_2014}.}
-        \begin{tabular}{ l c l }
-            Phase & Downsampled & Conditions \\ & length & \\
+        \begin{tabular}{ c c l }
+            \multirow{2}{*}{\textbf{Phase}} & \textbf{Downsampled} & \multirow{2}{*}{\textbf{Conditions}} \\
+            & \textbf{length} & \\
             \midrule
             Preflight & 1 & \ac{fm} \(= 2\) \\
             Taxi out & 5 & left or right engine is switched on \\
@@ -57,16 +58,16 @@ The \ac{fm} often makes use of the parameter \ac{wow}, a boolean parameter with 
     \end{center}
 \end{table}
 
-\begin{figure}
-    \centering
-    \includegraphics[width=\textwidth]{6008_20150409074414_NH_phases}
-    \caption{\label{fig:phases_example} Phase boundaries of NH indicated on Flight 0815}
-\end{figure}
+% \begin{figure}
+%     \centering
+%     \includegraphics[width=\textwidth]{6008_20150409074414_NH_phases}
+%     \caption{\label{fig:phases_example} Phase boundaries of NH indicated on Flight 0815}
+% \end{figure}
 
-Figure \ref{fig:phases_example} shows the NH plot from Flight 0815; dashed vertical lines represent phase boundaries.
+Figure \ref{fig:0815_ds} shows the T30 parameter from Flight 0815 in two forms; dashed vertical lines represent phase boundaries.
 
-\subsection{Features} \label{sec:features}
-Seven features of the \ac{hpt} disk were selected as points of interest for the research (see locations in Figure \ref{fig:hpt1}). The features were selected as critical points on the disk at which damage was expected to be highest, based on stress curves from previously computed \ac{fe} models. The seven features included three pairs with similar stress curves and resulting damage values: features 1 and 2 are both located in the bore; 4 and 5 are located under the front and rear drive arms, respectively; 6 and 7 are thermally sensitive features located in a seal fin and an air hole, respectively.
+\section{Features} \label{sec:features}
+Seven features of the \ac{hpt} disk were selected as points of interest for the research (see locations in Figure \ref{fig:hpt1}). The features were selected as critical points on the disk at which damage was expected to be highest, based on stress curves from previously computed \ac{fe} models. The seven features included three pairs with similar stress curves and resulting damage values: features 1 and 2 are both located in the bore; 4 and 5 are located under the front and rear drive arms, respectively; 6 and 7 are thermally sensitive features located in the seal fin and the air hole, respectively.
 
 \begin{figure}
     \centering
@@ -80,7 +81,7 @@ Due to their location within the bore with no direct contact to the hot, pressur
 
 Features 4 and 5, on the other hand, are expected to be sensitive to pressure due to their contact with high-pressure air, but not to temperature due to a lack of direct contact with hot air from the combustion chamber. Features 6 and 7, critical points with direct contact to the hot air, are expected to be highly sensitive to temperature.
 
-\subsection{Cycle Counter} \label{sec:cyclecounter}
+\section{Cycle Counter} \label{sec:cyclecounter}
 The \ac{ehm} data was processed using the company's internal Cycle Counter software to determine the number of cycles consumed by each feature during each flight. Figures \ref{fig:dmg_dist_low} and \ref{fig:dmg_dist_high} show the distribution of damage data (98\,315 values across 7 features from 14\,045 flights) computed by the Cycle Counter. For clarity in illustration and comparison, the distributions were split at a damage of 2.0 cycles: Figure \ref{fig:dmg_dist_low} contains all damage values between 0 and 2 cycles, with the overwhelming majority of the values (97\,868, 99.5\%) falling within this range; Figure \ref{fig:dmg_dist_high} contains all values above 2 cycles (with a maximum damage of 14.1 cycles), containing only 447 data points, or 0.05\%, of the total.
 
 \begin{figure}
@@ -94,10 +95,10 @@ It should be noted that, in Figure \ref{fig:dmg_dist_low}, there are clear pairw
 \begin{figure}
     \centering
     \includegraphics[width=\textwidth]{distribution_high_2}
-    \caption{\label{fig:dmg_dist_high} \ac{kde} plot displaying the distribution of damage cycles consumed by the seven features over 0.5\% of all 14\,045 flights (with damage of two cycles and above). The short vertical lines at the base represent individual data points. No flight caused damage of more than 2 cycles in features 4 and 5.}
+    \caption{\label{fig:dmg_dist_high} Strip plot showing the distribution of damage cycles consumed by the seven features across 0.5\% of all 14\,045 flights (with damage of two cycles and above). Each dot represents the damage from one flight. No flight caused damage of more than 2 cycles in features 4 and 5.}
 \end{figure}
 
-\subsection{Time Series Approximation} \label{sec:downsample}
+\section{Time Series Approximation} \label{sec:downsample}
 The input layer of an \ac{mlp} requires a fixed number of input values in order to be able to train weights and biases. As shown in Figure \ref{fig:flight_len}, the 14\,045 flights differed greatly in length. In order to enter the flight data into the neural network models, each parameter of each flight had to be approximated in a fixed-length representation. (This approximation is also referred to as downsampling.) For its suitability to generating fixed-length representations and for its superiority in minimising global reconstruction error (see Section \ref{sec:recon_err}) in comparison to others, the \ac{apca} algorithm \cite[]{keogh_locally_2002} was selected and implemented.
 
 \begin{figure}
@@ -112,23 +113,39 @@ Each channel of each flight's \ac{mts} was approximated to fixed-length flight p
 
 Two visualisations of the downsampled T30 time series from Flight 0815 is shown in Figure \ref{fig:0815_ds}.
 
-\subsubsection{Reconstruction Error} \label{sec:recon_err}
+\subsection{Reconstruction Error} \label{sec:recon_err}
 The term \textit{reconstruction error} refers to the amount of information lost due to downsampling. This can be quantified in several ways, but is essentially some form of distance between the original data and its approximation.
 
-Given the original time series, \(Q = \left[q_1,\,\ldots,\,q_m\right]\) and its downsampled representation \(R = \left[r_1,\,\ldots,\,r_n\right]\), \(m > n\), one simple measure for reconstruction error is given by
+Given the original time series, \(Q = \left[q_1,\,\ldots,\,q_m\right]\), its downsampled representation \(R = \left[r_1,\,\ldots,\,r_n\right]\), \(m > n\) and the corresponding indices \(K = \left[k_1,\,\ldots,\,k_n\right]\) of each element of \(R\) in relation to its counterpart in \(Q\), one simple measure for reconstruction error is given by
+\begin{align} \label{eq:recon_err}
+    D(Q,\,R') = \frac{1}{m}\sum_{i=1}^{m}{\left|q_i - r'_i\right|}
+\end{align}
+where \(i \in \left[1,\,m\right]\), and where \(R'\) and its elements \(r'_i\) represent a transformation of \(R\) and \(r_j\), \(j \in \left[1,\,n\right]\), in which the downsampled values are repeated \(k_{j + 1} - k_j\) times, such that \(R'\) contains exactly \(m\) values and that \(R'\) can be subtracted element-wise from \(Q\).
 
-\[
-    D(Q,\,R') = \frac{1}{m}\sum_{i=1}^{m}{q_i - r'_i}
-\]
+To illustrate this, consider the (fictive) time series \(Q\), its downsampled representation \(R\) and the indices \(K\) of the elements from \(R\) in \(Q\) as defined by the downsampling algorithm:
+\begin{align}
+    Q & = [1,\,1.4,\,3.7,\,3.5,\,2.3,\,1.8,\,1.06,\,0.4,\,0.05] \\
+    R & = [1,\,3,\,0] \\
+    K & = [0,\,1,\,5]
+\end{align}
+These values are shown in Figure \ref{fig:recon_err}. In order to calculate the reconstruction error, \(R\) is first transformed into an array \(R'\) with as many elements as \(Q\) with each \(r\) repeated as many times as the difference between \(k_i\) and \(k_{i + 1}\) (or, for the final \(r\), until \(R'\) has the same length as \(Q\)), resulting in
+\begin{align}
+    R' & = [1,\,3,\,3,\,3,\,3,\,0,\,0,\,0,\,0].
+\end{align}
+Now, the mean of the absolute element-wise difference between \(Q\) and \(R'\) can be determined (Equation \ref{eq:recon_err}). The output is the reconstruction error which in this case amounts to 0.757.
 
-where \(i \in \left[1,\,m\right]\), and where \(R'\) (and its elements \(r'_i\)) represent a transformed \(R\) in which the downsampled values are repeated until the index of the next downsampled value is reached, such that \(R'\) contains as many values as \(Q\) (\(m\) in total) and that \(R'\) can be subtracted element-wise from \(Q\).
+\begin{figure}
+    \centering
+    \includegraphics[width=\textwidth]{recon_err}
+    \caption{\label{fig:recon_err} A fictive dataset with its downsampled approximation. The reconstruction error according to Equation \ref{eq:recon_err} is the mean length of the red dashed lines.}
+\end{figure}
 
-Based on this measure, the reconstruction error of the downsampled data is 1.2\%, or an average deviation of 0.012 from the original per data point, which is not expected to cause issues in terms of data loss. However, particularly during the descent phase, as is visible in Figure \ref{fig:0815_ds}, many of the peaks and troughs are lost to the algorithm. Since these occur within a low range relative to the maximum where impact on damage is less significant, it is not expected that the information lost be of great value.
+Based on this measure, the reconstruction error of the downsampled flight data is 1.2\%, representing an average deviation of 0.012 from the original per data point, which is not expected to cause issues in terms of data loss. However, particularly during the descent phase, as is visible in Figure \ref{fig:0815_ds}, many of the peaks and troughs are lost to the algorithm. Since these occur within a low range relative to the maximum where impact on damage is less significant, it is not expected that the information lost be of great value.
 
-\subsubsection{Visualisation}
+\subsection{Visualisation}
 With the flights in a uniform, downsampled representation, some characteristics of the data begin to become more apparent.
 
-\paragraph{NH}
+\paragraph*{NH} \label{sec:data:nh}
 \begin{figure}
     \centering
     \includegraphics[width=\textwidth]{f3_NH_high_low_dmg_500}
@@ -145,7 +162,7 @@ To create Figure \ref{fig:high_low_dmg_NH}, the flights were ordered by damage a
 
 This representation shows a clear (albeit unsurprising) separation of high- and low-damage flights across the entire range, with a particularly clear gap around downsampled time point 7 --- an early point during the take-off phase where NH generally peaks --- and gives an idea of one type of characteristic that the neural networks should be able to learn. Figure \ref{fig:dmg_violin_NH} shows the distribution of NH values at time point 7 for feature 3. The boxplots contained within the so-called violins show that the majority of these flights could be categorised correctly as high- or low-damage based on this single time point. If the NH value towards the beginning of take-off is below 0.94, it is most likely to be a low-damage flight; if above, a high-damage flight.
 
-\paragraph{ALT}
+\paragraph*{ALT}
 Figure \ref{fig:high_low_dmg_ALT} shows the sensitivity of feature 2 to altitude. The higher the flight altitude, the higher the damage. The reason for this is atmospheric pressure: At high altitudes, the rotational speed of the fan must be increased to compensate for the lack of air (and therefore oxygen) for combustion. This claim is supported by the sensitivity of features 1 and 2 to altitude (Figures \ref{fig:dmg_violin_ALT_f1} and \ref{fig:dmg_violin_ALT_f2}) as these were expected to be sensitive to NH (Section \ref{sec:features}). This is a strong contrast to the relative indifference to altitude of, for example, feature 6 (Figure \ref{fig:dmg_violin_ALT_f6}).
 
 \begin{figure}
@@ -172,7 +189,7 @@ Figure \ref{fig:high_low_dmg_ALT} shows the sensitivity of feature 2 to altitude
     \caption{\label{fig:dmg_violin_ALT_f6} Violin plot showing the distribution of ALT values at downsampled time point 50 (middle of cruise phase), coloured according to damage to feature 6. All parameter values normalised.}
 \end{figure}
 
-\paragraph{P30}
+\paragraph*{P30}
 Figure \ref{fig:high_low_dmg_P30} shows P30 values for feature 5. As expected, a higher peak pressure during the take-off phase causes a higher consumption of service life. During the cruise phase, a vague tendency in the opposite direction --- lower pressure, higher damage --- is visible. This, as with altitude, can be attributed to altitude, where a lower atmospheric pressure causes an increase in rotational speed.
 
 \begin{figure}
@@ -190,22 +207,55 @@ Figure \ref{fig:high_low_dmg_P30} shows P30 values for feature 5. As expected, a
 % \end{figure}
 
 % T30
-\paragraph{T30}
+\paragraph*{T30}
 \begin{figure}
     \centering
     \includegraphics[width=\textwidth]{f6_T30_high_low_dmg_500}
     \caption{\label{fig:high_low_dmg_T30} Line plot showing T30 from 500 flights, coloured according to their damage to feature 6. Red lines represent the 250 flights with the most damage to this feature, green the 250 with the least. All parameter values normalised.}
 \end{figure}
 
-As well as the expected influence of peak temperature at during take-off, Figure \ref{fig:high_low_dmg_T30} shows a tendency during the climb phase for high damage if large fluctuations are present, as shown by the sharp, downwards-pointing, red V-shaped lines between T30 values of approximately 0.4 and 0.85. Since this flight characteristic can occur at any point during the climb, this is the type of value progression that should be picked up by filters in a \ac{cnn}.
+As well as the expected influence of peak temperature at during take-off, Figure \ref{fig:high_low_dmg_T30} shows a tendency during the climb phase for high damage if large fluctuations are present, as shown by the sharp, red, V-shaped lines between T30 values of approximately 0.4 and 0.85. Since this flight characteristic can occur at any point during the climb, this is the type of value progression that should be picked up by filters in a \ac{cnn}.
 
-\subsection{Dataset Reduction} \label{sec:data_sizes}
+\section{Representation for Classification} \label{sec:data:classification_rep}
+For the classification models, the flights were categorised by their damage values into one of a number of ordinal classes. Iterating through each feature, the flights were first ordered by damage and split into a number (\(n\)) of equally sized groups. These groups were then given labels \(0\) (least damaging) to \(n-1\) (most damaging).
+
+The boundaries between classes, determined by this method, are summarised in Table \ref{tab:tsc_boundaries}. Class 0 contains damage values between 0 and the class boundary 0 --- 1; class 3 contains all damage values greater than or equal to the class boundary 2 --- 3.
+
+\begin{table}
+    \begin{center}
+        \caption{\label{tab:tsc_boundaries} Class boundaries resulting from splitting each feature into four (approximately) equally-sized classes. Class 0 represents the least damaging flights with damage between 0.0 and class boundary 0 --- 1; class 3 represents the most damaging flights with damage upwards of class boundary 2 --- 3.}
+        \begin{tabular}{ >{\bfseries}c c c c c c c c }
+            \multirow{2}{*}{\textbf{Class boundary}} & \multicolumn{7}{c}{\textbf{Feature number}} \\
+             & 1 & 2 & 3 & 4 & 5 & 6 & 7 \\
+            \midrule
+            0 --- 1 & 0.9317 & 1.0381 & 0.7411 & 0.4059 & 0.3631 & 0.6388 & 0.7068 \\
+            1 --- 2 & 1.0649 & 1.1572 & 0.8445 & 0.5102 & 0.4408 & 0.8221 & 0.8796 \\
+            2 --- 3 & 1.1775 & 1.2821 & 0.9374 & 0.6159 & 0.5306 & 1.0386 & 1.0909 \\
+        \end{tabular}
+    \end{center}
+\end{table}
+
+It was decided not to use fixed class sizes for splitting the data as this would have resulted in categorical bias. For example, applying class boundaries \(...,\,0.6,\,0.8,\,1.0,\,1.2,\,...\) to feature 3 would result in the classification of the majority of flights between 0.8 and 1.0 (Figure \ref{fig:dmg_dist_low}), while damage values for this feature range from 0.312 to 3.296. This setup could cause the model to learn to predict the class between 0.8 and 1.0 for \textit{all} flights in order to achieve the best results.
+
+With its damage values in features 1 to 7 of
+\[
+    \left[1.14591,\,1.24986,\,0.88227,\,0.359625,\,0.340495,\,0.436512,\,0.57484\right],
+\]
+the classes assigned to Flight 0815 were \(\left[2,\,2,\,2,\,0,\,0,\,0,\,0\right]\). These values were converted to an array of seven so-called \textit{one-hot} arrays in which the index of the value 1 represents the class number:
+\[
+    \left[ \left[ 0,\,0,\,1,\,0 \right],\,\left[ 0,\,0,\,1,\,0 \right],\,\left[ 0,\,0,\,1,\,0 \right],\,\left[ 1,\,0,\,0,\,0 \right],\,\left[ 1,\,0,\,0,\,0 \right],\,\left[ 1,\,0,\,0,\,0 \right],\,\left[ 1,\,0,\,0,\,0 \right]\right].
+\]
+These one-hot arrays were then concatenated to create an array of 28 values, containing 21 \textit{0}s and 7 \textit{1}s.
+
+The output of the network is therefore also a array of length 28 containing probabilities between 0 and 1 that the corresponding class is `hot'. These are reshaped into an \(\left(7,\,4\right)\)-array and, using the \texttt{numpy.argmax()} function to locate the highest probability per feature, converted back into seven classes with values 0 to 3.
+
+\section{Dataset Reduction} \label{sec:data_sizes}
 The complete dataset consists of \ac{ehm} data for 14\,045 flights, as well as seven Cycle Counter output values for each flight. Since scalability is an important factor in the research, the dataset was separated into two further datasets of 4\,213 and 1\,211 flights in order to test model performance on smaller training datasets. (These three datasets will hereinafter be referred to as `complete', `reduced' and `greatly reduced', respectively.)
 
 These datasets were further split into training and validation subsets at a ratio of 3:1 (before rounding). The complete dataset therefore consisted of 10\,534 training and 3\,511 validation flights, the reduced dataset 3\,160 and 1\,053, and the greatly reduced dataset 909 and 302. The flights numbers in each set and subset were kept constant throughout all models to avoid skewing the data.
 
-% \subsection{Optional: Case Studies}
+% \section{Optional: Case Studies}
 
-% \subsubsection{6014: Stress Ranges}
+% \subsection{6014: Stress Ranges}
 
-% \subsubsection{6079: Long Taxi}
+% \subsection{6079: Long Taxi}
