--- a/thesis.tex
+++ b/thesis.tex
@@ -1,37 +1,53 @@
 % \documentclass[12pt]{scrartcl}
-\documentclass[12pt]{article}
+\documentclass[fontsize=12pt,          %
+               pagesize,               %
+               headings=normal,        %
+               bibliography=totoc,     %
+               cleardoublepage=plain,  %
+               fleqn,                  %
+            %    numbers=noendperiod     %
+               ]{scrbook}
 
 \input{sections/preamble}
+\input{sty/layout}
 \input{sections/abbrv}
 
 \begin{document}
 
-\newgeometry{left=3cm, right=3cm, top=2.5cm, bottom=2.5cm}
+\tmatter
 \input{sections/00_title-page}
-\restoregeometry
 
+% \restoregeometry
+\fmatter
 \onehalfspacing
 \input{sections/01_erklaerung}
-\newpage
+% \newpage
+\includepdf{pdf_input/aufgabenstellung_bryson}
+% \newpage
+
 \tableofcontents
-\newpage
-\printacronyms[name=List of Abbreviations]
-\newpage
+% \newpage
+% \printacronyms[name=List of Abbreviations]
+% \newpage
+
+\mmatter
 \input{sections/02_intro}
-\newpage
+% \newpage
 \input{sections/03_theory}
-\newpage
+% \newpage
 \input{sections/04_data}
-\newpage
+% \newpage
 \input{sections/05_practical}
-\newpage
+% \newpage
 \input{sections/06_discussion}
-\newpage
+% \newpage
 \input{sections/07_conclusion}
-\newpage
+% \newpage
 % \input{sections/08_thanks}
 % \newpage
 
+
+\bmatter
 \bibliographystyle{apacann}
 \bibliography{sources}
 
